src/test/rustdoc-ui/deny-intra-link-resolution-failure.stderr
error: `[v2]` cannot be resolved, ignoring it...
  --> $DIR/deny-intra-link-resolution-failure.rs:13:6
   |
LL | /// [v2] //~ ERROR
   |      ^^ cannot be resolved, ignoring
   |
note: lint level defined here
  --> $DIR/deny-intra-link-resolution-failure.rs:11:9
   |
LL | #![deny(intra_doc_link_resolution_failure)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: to escape `[` and `]` characters, just add '/' before them like `/[` or `/]`

